# fastapi-tortoise-orm

./: Makefile  README.md  REAME.md  main.py  pyproject.toml  requirements.txt  settings.py
core/: main.py
core/db/: config.py  connect.py
core/models/: __init__.py
db/: __init__.py  config.py  connect.py
server/: main.py  settings.py
server/db/: config.py  connect.py
server/migrations/models/: 0_20231024220142_init.py  1_20231024220337_update.py  2_20231024220952_update.py
server/models/: __init__.py  base.py  users.py
